runtests.log
starting build

**********************************************************************

Test build
build xv6 using make

**********************************************************************
Trying to build project using make
make xv6.img fs.img
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie -fno-pic -O -nostdinc -I. -c bootmain.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie -fno-pic -nostdinc -I. -c bootasm.S
ld -m    elf_i386 -N -e start -Ttext 0x7C00 -o bootblock.o bootasm.o bootmain.o
objdump -S bootblock.o > bootblock.asm
objcopy -S -O binary -j .text bootblock.o bootblock
./sign.pl bootblock
boot block is 451 bytes (max 510)
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o bio.o bio.c
In file included from bio.c:22:
defs.h:189:1: error: unknown type name ‘pte_t’; did you mean ‘pde_t’?
  189 | pte_t*          walkpgdir(pde_t *pgdir, const void *va, int alloc);
      | ^~~~~
      | pde_t
make: *** [<builtin>: bio.o] Error 1


test build FAILED
 (build xv6 using make)
 make failed (error 2)
 required file 'xv6.img' does not exist after make
 required file 'fs.img' does not exist after make

Skipped 10 tests.
To keep testing after failing a test, use flag '-c' or '--continue'
